GUI-2664 A z-index fix of tips

--- a/stylesheets/less/partials/basic.less
+++ b/stylesheets/less/partials/basic.less
@@ -2510,6 +2510,10 @@ input[type=number]::-webkit-outer-spin-button {
         z-index: 10 !important;
     }
 
+    &.z-0 {
+        z-index: 0;
+    }
+
     .tooltip-inner, .tooltip-arrow {
         color: @color-text-darkGray;
         opacity: 1 !important;
